5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1643_2703.log
== SUBMITION (2019-04-14 23:59:37) 
-- CODE:
idade = int(input("jessica tem: "))
if idade >= 18:
	mensagem("voce e eleitor")
else:
	mensagem("voce nao e eleitor")
print(mensagem .lower())
-- EXECUTION TIME:
0.179229
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2703/main.py", line 5, in <module>
    mensagem("voce nao e eleitor")
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:59:42) 
-- CODE:
idade = int(input("jessica tem: "))
if idade >= 18:
	mensagem("voce e eleitor")
else:
	mensagem("voce nao e eleitor")
print(mensagem .lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem("voce nao e eleitor")
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:01:26) 
-- CODE:
idade = int(input("jessica tem: "))
if idade >= 18:
	mensagem = "voce e eleitor"
else:
	mensagem = "voce nao e eleitor"
print(mensagem .lower())
-- EXECUTION TIME:
0.142964
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
voce nao e eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
voce e eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
voce e eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:01:30) 
-- CODE:
idade = int(input("jessica tem: "))
if idade >= 18:
	mensagem = "voce e eleitor"
else:
	mensagem = "voce nao e eleitor"
print(mensagem .lower())
-- EXECUTION TIME:
0.130671
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
voce nao e eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
voce e eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
voce e eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:01:33) 
-- CODE:
idade = int(input("jessica tem: "))
if idade >= 18:
	mensagem = "voce e eleitor"
else:
	mensagem = "voce nao e eleitor"
print(mensagem .lower())
-- OUTPUT:
voce nao e eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:02:42) 
-- CODE:
idade = int(input("jessica tem: "))
if idade >= 18:
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem .lower())
-- EXECUTION TIME:
0.136787
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:03:21) 
-- CODE:
idade = int(input("jessica tem: "))
if idade >= 18:
	mensagem = "eleitor"
else:
	mensagem = "nao eleitor"
print(mensagem .lower())
-- EXECUTION TIME:
0.162075
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:03:34) 
-- CODE:
idade = int(input("jessica tem: "))
if idade >= 18:
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem .lower())
-- EXECUTION TIME:
0.116591
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
